details of the model

--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -68,9 +68,7 @@ PCA yielded 101 components. I included 33 principal components based on the eige
 
 ## Model of patient perceived symptom controllability 
 
-After adjusting for baseline controllability and controlling for individuals, their target symptoms, age, education, marital status, the detail of the model is listed here: 
-
-![Mixed-effects model of predicting symptom controllability](modelplot.html).
+After adjusting for baseline controllability and controlling for individuals, their target symptoms, age, education, marital status, the detail of the model is listed here: [Mixed-effects model of predicting symptom controllability](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/modeldetail.pdf)
 
 6 underlying constructs were included in the final model and their loadings:
 
