--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -41,7 +41,7 @@ Eligible participants of parent study were 18+ years; and had recurrent or persi
 
 I designed 9 word categories (i.e., percentage of words in the text that are cancer and treatment-related symptoms, effort, impact on life, positive adj describing symptom, negative adj describing symptom, symptom controlled, symptom uncontrolled, percentage of word control used as noun and verb, respectively). I used [LIWC2015](http://liwc.wpengine.com/) and [LightSide platform](http://ankara.lti.cs.cmu.edu/side/) to extract these 9 word categories from the [self-designed dictionary](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/Dictionary/SDWRITE.dic) and other 93 word categories from the [LIWC2015 internal dictionary](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/Dictionary/LIWC2015Dictionary.pdf). All the linguistic features, other than the total word count, were measured by the percentage of words in the specific word category out of the total word count of the posts; the scale of these linguistic variables is from 0 to 100.  
 
-I first used individual linguistic features as potential predictors of controllability at 8 weeks in building mixed-effects models. However, after adjusting for baseline controllability and controlling for individuals, target symptoms, and participant sociodemographic factors, not a single individual linguistic variable was statistically significant associated with participant controllability. Therefore, I decided to use principal components analysis of individual linguistic variables to extract the potential underlying constructs and use linear mixed effect model to structure the relationship between the components and controllability at 8 weeks. Principal components were chosen as candidate predictors if their eigenvalues are more than 1. I used the iterative backward elimination technique to select principle components, controlling for the aforementioned set of covariates(i.e., baseline controllability, individuals, target symptoms, and participant sociodemographic factors). The criteria I used in selecting models are AIC (Akaike's Information Criteria) and BIC (Bayesian Information Criteria). 
+I first used individual linguistic features as potential predictors of controllability at 8 weeks in building mixed-effects models. However, after adjusting for baseline controllability and controlling for individuals, target symptoms, and participant sociodemographic factors, not a single individual linguistic variable was statistically significant associated with participant controllability. Therefore, I decided to apply principal components analysis (PCA) on individual linguistic variables to extract the potential underlying constructs and use linear mixed effect model to structure the relationship between the components and controllability at 8 weeks. Principal components were chosen as candidate predictors if their eigenvalues are more than 1. I used the iterative backward elimination technique to select principle components, controlling for the aforementioned set of covariates(i.e., baseline controllability, individuals, target symptoms, and participant sociodemographic factors). The criteria I used in selecting models are AIC (Akaike's Information Criteria) and BIC (Bayesian Information Criteria). 
 
 The data processing and analysis steps are as the following: 
 
@@ -51,7 +51,7 @@ The data processing and analysis steps are as the following:
 
 3. Export and combined extracted features to a single csv file: [ResultsDf8BL(noIDtexts).csv](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/ResultsDf8BL(noIDtexts).csv)
 
-4. Apply principal component analysis (PCA) and build mixed-effect models: [Data-analysis.md](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/Data-analysis.md) and [Data-analysis.Rmd](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/Data-analysis.Rmd)
+4. Apply PCA and build mixed-effect models: [Data-analysis.md](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/Data-analysis.md) and [Data-analysis.Rmd](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/Data-analysis.Rmd)
 
 
 # Results
@@ -69,6 +69,8 @@ PCA yielded 101 components. I included 33 principal components based on the eige
 ## Model of patient perceived symptom controllability 
 
 After adjusting for baseline controllability and controlling for individuals, their target symptoms, age, education, marital status, the detail of the model is listed here: [Mixed-effects model of predicting symptom controllability](https://github.com/Data-Sci-2021/Linguistic-reflection-of-perceived-symptom-controllability/blob/main/modeldetail.pdf)
+
+![Linguistic reflections of controllability](images/modfinal model-1.png)
 
 6 underlying constructs were included in the final model and their loadings:
 
